Synonyms, fix whitespace, add Test, update readme, add first J phrases

--- a/aplcart.css
+++ b/aplcart.css
@@ -6,9 +6,9 @@ i,td:nth-child(n+3){display:none}
 body{filter:invert(.85);background:#444;color:#222;overflow:hidden;position:relative;font-size:16px}
 .b{filter:invert(1);background:#222}  .w{filter:invert(0);background:#ddd}
 div{background:#fff;height:calc(100vh - 13ex);overflow-y:scroll;overflow-x:hidden}
-#t{width:100%;table-layout:fixed;color:#333}
+#t{width:100%;table-layout:fixed;color:#333;white-space:pre-wrap}
 tr:hover td{color:#000}
-td{padding:.5em;}
+td{padding:.5em}
 td:first-child{word-wrap:break-word}
 #z{margin-top:1ex;display:inline-block;width:calc(100% - 1.75em)}
 #q{width:calc(100vw - 15em);border:none;border-radius:0 1em 1em 0;font-size:medium;padding-right:1.1em}
